# ChangeLog for net-firewall/psad
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/psad/ChangeLog,v 1.84 2015/02/15 10:09:44 jer Exp $

*psad-2.2.5 (15 Feb 2015)

  15 Feb 2015; Jeroen Roovers <jer@gentoo.org> +psad-2.2.5.ebuild:
  Version bump.

*psad-2.2.4 (20 Jan 2015)

  20 Jan 2015; Jeroen Roovers <jer@gentoo.org> +psad-2.2.4.ebuild,
  +files/psad-2.2.4-var-run.patch:
  Version bump.

  03 Nov 2014; Jeroen Roovers <jer@gentoo.org> -psad-2.2.2-r1.ebuild:
  Old.

  03 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> psad-2.2.3.ebuild:
  ppc stable wrt bug #510584

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org> psad-2.2.3.ebuild:
  Stable on alpha, bug #510584

  18 Jul 2014; Jeroen Roovers <jer@gentoo.org> psad-2.2.3.ebuild:
  EAPI bump.

  15 Jul 2014; Chema Alonso <nimiux@gentoo.org> psad-2.2.3.ebuild:
  Stable for amd64 wrt bug #510584

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> psad-2.2.3.ebuild:
  x86 stable wrt bug #510584

  17 May 2014; Jeroen Roovers <jer@gentoo.org> -psad-2.2.1.ebuild:
  Old.

  24 Mar 2014; Agostino Sarubbo <ago@gentoo.org> psad-2.2.2-r1.ebuild:
  Stable for ppc, wrt bug #502874

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org> psad-2.2.2-r1.ebuild:
  Stable for alpha, wrt bug #502874

  09 Mar 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> psad-2.2.2-r1.ebuild:
  x86 stable wrt bug #502874

  07 Mar 2014; Pacho Ramos <pacho@gentoo.org> psad-2.2.2-r1.ebuild:
  amd64 stable, bug #502874

*psad-2.2.3 (03 Mar 2014)
*psad-2.2.2-r1 (03 Mar 2014)

  03 Mar 2014; Jeroen Roovers <jer@gentoo.org> -psad-2.2.2.ebuild,
  +psad-2.2.2-r1.ebuild, +psad-2.2.3.ebuild:
  Version bump. Install /etc/psad/protocols.

*psad-2.2.2 (24 Jan 2014)

  24 Jan 2014; Jeroen Roovers <jer@gentoo.org> -psad-2.2-r1.ebuild,
  +psad-2.2.2.ebuild:
  Version bump.

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> psad-2.2.1.ebuild:
  Stable for x86, wrt bug #461206
