@@ -1,0 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST git-patch-tags-0.2.tar.bz2 1508 SHA256 e32808f8e978872c868c3f8fcbf1dc1cad23095279c8fd7ae4a2b017e96e19cb SHA512 63ab541ec77ea70d79ea4e4b441c2f84cb45e0b130c1a57f4f3f1522fd9d7a4a90d137c243ca20733424602d0e75f5079b98b6ce7d39b6d2df185690020dee48 WHIRLPOOL 379cdb0bcb7d7b1a52111a3be42b1b1c1c5209008a3262ecd12c6c754988a715bf93f4971b4432ce8b3b6d57bfe966fbaaaa327c9b126bfe13bf4d44c7a49835
+EBUILD git-patch-tags-0.2.ebuild 481 SHA256 432073846c75e5014d0183884b9ac5ed8bbd350e8abda0833a6a923686437a91 SHA512 5da37f12afad5d3c37ce018f9ab95d8049a02629f6a2c6f3be477ad0ccb40242350b192bf751b39da6919665f89240fdba2c7223ddb31f900680d836ac05f0b7 WHIRLPOOL 2eec3fb8a8e045ef52f8a2da5800b015d5a4de802920b2bfd2a77a2642d4c7698787f40df3b154139f082db31e11e1cda8113aa61cac91fb17806a8534ee2433
+MISC ChangeLog 368 SHA256 b7b091df36fc6efddb439acc6d23679aed8d291f5ffdac8ca255d43a28b221b0 SHA512 4ab2593b9934f14252ba9b18d7c71e5728c46136e92bc73103cc568c10f8fcecc4a06a6e3f4934cc5416280c87142fdf0f2e09141be8986a289aef91ad6c4f25 WHIRLPOOL c6f2d20d5e8f297324eed4e500ba7ba9958805eb40df249fed9d0a3fc38aef6d9e823c9d8cd41d66447b7e636b92cd87ffeab9651379d04ea0bd40454d248cc9
+MISC metadata.xml 156 SHA256 64d20c782589b423a6e75ba6fff7edead1ec8fbae742d27dd57f5299e8328500 SHA512 7dc1d902106e794e1a12bde5dcacb8b7143584cba9c61e72ac5728dd952663144c1b0efc949fbbc9fcec03b396b5e060e8263eaad7d70cd82d6d5b350c62f0c1 WHIRLPOOL 4381a5d144e783e5979d394720b32f7d95818a8571f748e72c5ece965c4e0375b1aec0c34f6f506a9f9fc255f1b69a220fdb74d1dbb8aabc92ec48afa44ab883
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJVDRwyAAoJEEqz6FtPBkyjwiwIAJxxAtf1GkOL91p5ElUL7En5
+C3TBJG5LPYdGsbiSDGSon970+3shZOC0HREKN3JkMW4xxioWUhvs4ZbxPS7X4xv5
+tD8yi+X3jJo2O+nsuQYfFbUIBlVuwOeZTo4EL3ECgpypVwRCu7LYmW5SI0k+4mRx
+a3yqi9vSJ7prOOKgGYdVPsL6H/5ZWzEN4Zs1xZbyhMFDIBV4L9Ziz+SNSiJ+tCI9
+CsC3rikJvZqDR9b8ely8Ech7boqPPNKEUroPJDUirp8hVKdS4pQs95FUZbDhTxkf
+KYBHFiwrXyQQMMDSna46zXEQ5lA4DjY4M/i2q66OsNkvBCT9hR7Sxi/7VPgsLx0=
+=fMdp
+-----END PGP SIGNATURE-----
