@@ -1,0 +1,12 @@
+DEFINED_PHASES=install postinst postrm
+DEPEND=|| ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
+DESCRIPTION=vim plugin: add git patch tags as used in linux kernel development
+EAPI=5
+HOMEPAGE=http://www.vim.org/scripts/script.php?script_id=3632
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2+
+RDEPEND=|| ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
+SLOT=0
+SRC_URI=mirror://gentoo/git-patch-tags-0.2.tar.bz2 http://dev.gentoo.org/~radhermit/vim/git-patch-tags-0.2.tar.bz2
+_eclasses_=vim-doc	1c18baeec98cec3287524cbf2fee2bd2	vim-plugin	286547e90fbbc4c841eee80cd73e646c
+_md5_=8d0e67bf37fbc546f52757b8aeaf5e4d
