@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=virtual/perl-ExtUtils-MakeMaker dev-lang/perl:=[-build(-)]
+DESCRIPTION=Port Scanning Attack Detection daemon
+EAPI=5
+HOMEPAGE=http://www.cipherdyne.org/psad
+KEYWORDS=~alpha ~amd64 ~ppc ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=dev-perl/Bit-Vector dev-perl/Date-Calc dev-perl/NetAddr-IP dev-perl/Unix-Syslog net-firewall/iptables net-misc/whois virtual/logger virtual/mailx virtual/perl-Storable dev-lang/perl:=[-build(-)]
+SLOT=0
+SRC_URI=http://www.cipherdyne.org/psad/download/psad-2.4.0.tar.bz2
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	7a1c6bac46bba968758a2f7666af645b	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	unpacker	f300a7ca9131b1024a79762e8edd3c52
+_md5_=2d7eb0644cdf53d9c8d32eb3c5144044
