@@ -6,15 +6,17 @@ AUX psad-2.2.4-var-run.patch 410 SHA256 41d2da9d15611f5c3b8252347adfff1364455550
 DIST psad-2.2.3.tar.bz2 1253488 SHA256 2d6976c395cdf2d7372bb06d85608fed0c91d54a63737d7d2671f90b44cdbc1e SHA512 1cc424252d287cf8f120e9e097a174c19da218f3efaaec1d9249c6b5cb976c5ab8fce70e7cf8a770366919e83c99f9b5462d44f9919645ea1fc9312e757f904a WHIRLPOOL 377563f32a43655d1d0989166783369e8071808e9746795dbaafdcb7c9c673756e379a9ee5a2ee30751223b6ee41e8dbbc730a925464cc1632021359e94e3071
 DIST psad-2.2.4.tar.bz2 1231887 SHA256 244ec0a9cc523bb0d51dce24fec265247abf1b72d15b5c7713d6dc2f466b9e45 SHA512 d154127c6b2442077d9047ab8325a2b7188c6172d1a3c47339fbedfc3e78f4d7a8f3f885256c01fdb66458ae63ef6714d28bd11f57f8cd96721cd58bb181524e WHIRLPOOL 7ed4a48a614b11fc02c4d2582c8e556fdc21e141308222e0cb3b1ad0b6266c640841a41b07d7ee5386be56c4d5ebe894accfbfaaa6d5e002c01addc78e1404dc
 DIST psad-2.2.5.tar.bz2 1243987 SHA256 736d446266227cb65511d792c85224573c95ea4dc3bde3d5c65bc19084f57452 SHA512 195a06420cf821d182a5422705ba2d407fd35f23887430e61925cad0eada7d20e2416eaf6317857a5aec2f1264a280a7e0128cc301f17dcf20cf833a9f0efb6e WHIRLPOOL fac4797e0a399d4f5edf2179c21d37791d184ee1e334b9b8fb2707405afc10ca0c0d4ab43cd274f34cf8ba9453189066b1d46b955d0533fa357e376ef3817f1f
+DIST psad-2.4.0.tar.bz2 1359306 SHA256 2f2c55640c7da0dfeb00c58ee083d1cfcfaf38c5b2dd41e85b30b52e3e28e979 SHA512 0841e3ab85ac1d4f987663f131e9d4d84895c4386d6b7ede2dd4f690525e9ce0a5df2ee60d6af2a1e58044b710194baec30b5060e7fb537ae198e8e5bb2fa1c3 WHIRLPOOL e14d53eede1d062e5f67b805a44974792c61d02153b265ad1c71098e02db092513143a962fad40f40f1ad775128697c59d956933713d449462214b472c9d8369
 EBUILD psad-2.2.3.ebuild 2285 SHA256 cc5a5f2615c9ce70f65cf034256dccd10855c0a617561c3b978c18b6aa422336 SHA512 346ad5accd99727c5d512e5b10c0bf4619768290915887bf89bf6758de2e472fd745ceb2aff14edb86d03d4f0d9db44c585222640c28023cf01bc7c4e2a2c385 WHIRLPOOL 56171b20d566e295690fbadf6482c975462d5e323113ef05eb31a4ba08f9470bf4b9e6dfbbb1904395751040fb2eab012a64fdc15f0b0c286130c2834e8cab49
 EBUILD psad-2.2.4.ebuild 1978 SHA256 4d07e3088154bf4cca517771bce617f2e99252531088cd94f6a88dcbec8ffb92 SHA512 a6ecd8de9ee63f0d6d0573dae681af8bde77f1a4ea3f2a26a09b9c980bf9170fd3b3c971a55522950cd1722ec14e40295243f8719c93e1bec22af44eb0322132 WHIRLPOOL 1fef9dc9182728c772216e11b6354d6630673f3d943eb181187ffa6669a6fbe04e02f41c697fa873af0183ff82def56a0fbdac186504bb04a76d27000b6d98e5
 EBUILD psad-2.2.5.ebuild 1978 SHA256 416a3cb748e7f8a4efb624665771937d8e19c55b7f284e3ba57904c965df9945 SHA512 c67aa3a96fe55d63e5b89e31f7ba56d3465b2d0e56713ab3cdb62bd6adb39583bd393f620bc431f82657c6116c0b226b22f72c3ebd7d6ca527e6a714929dcba4 WHIRLPOOL 7c732c2a7845ca96be6f9b344fc6520e45b317a5ab56b2f88095bec99478d21138454f68526504b5f7836d08da977ecb74f029ccf4f09c6230e77849e2e30cd4
-MISC ChangeLog 13295 SHA256 64cffaea8659dce0958e4f8c3f3eed3db055b3faa4844f878cd21934ec15e892 SHA512 de9f05e1136b12ba5762329011813f60a595e83121988dffad27050f8de2147ac78f88c59208e27f7a02367858b4c5bf661c171433c24441a69e85180acc0163 WHIRLPOOL fc223af6a08cb39b998f5aa7d26f9b319d0860d797c4a37ee0e03048bf0f982bb9995c57b39750c4d6f7b88cc9d9ba980ad7a885498f7324af6f12931c9d31a0
+EBUILD psad-2.4.0.ebuild 1978 SHA256 ea9bc8ff57dbcdc4cdfbe65fd4edca1ae2d032fc6f601aae027955b8c61b177c SHA512 9fa99bbf718364851a5a4a2e89826d8fdfc5c57689dcfabf67a590e7799761303f717761a60017d31fe5f76474531b4ca27eb13b3556511dada86d67424e1692 WHIRLPOOL 04674bc75e2b1b2fc5f78b15aa6792c691b0316ddfa46ff375cffeec278fd1798297912983de88986fd5c4f464a60d2108bedad3469bd3b03f97bb534317c946
+MISC ChangeLog 13406 SHA256 d41a3803cff416371d6d1dfa329c22970e6a5faed00fc0940e98fe1b04c980cc SHA512 3535f5df3ce78857b6de33cf3e80792c0cae8108106e7ca88f19eb2da8aaf9db141dd8d53e450c964f37206dc01120cb32a9835d8613e9692ef89d5c28905e22 WHIRLPOOL 4af42d6e36195e741ac952740b1984a4cb5976ebd26a68510c1c8e3183de35ee39c1d5023e149d6893ddc2832032586ce238a2e2007bafad3b6e71c7e956cd38
 MISC metadata.xml 159 SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6 SHA512 2c104d2a804da0a38770b6f1ec26cd5b0a49e30392177d5794734a3f4129e82fd0971e5a8a1e48913bfaf1bab57e7bac1fe5ce4f5c618ce057aa5aaf9e59113b WHIRLPOOL 044dec64f8899582332d7fbd7612d2a7c5c7234c44bb9fc51a56f7d6400cd3066a154c3c49dd3f4b468f11e029aa24ff0097ab1387b9f322d57f1d9876afd601
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTgcGkACgkQVWmRsqeSphOBUgCfWFpaRyIiQo3W2fYDhnHqIvn9
-/JMAn1vXxD66KczzKJ3DxkWAiq8XlN4W
-=iARv
+iEYEAREIAAYFAlUNHe8ACgkQVWmRsqeSphNUTQCfQsXpG0Ad0oA9jSjOz+bXC4yl
+Ff0AnjZqUmH1kc/GuQo4AVyfH4MDmTyn
+=dq/2
 -----END PGP SIGNATURE-----
