@@ -1,0 +1,10 @@
+# ChangeLog for app-vim/git-patch-tags
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-vim/git-patch-tags/ChangeLog,v 1.1 2015/03/21 07:22:27 radhermit Exp $
+
+*git-patch-tags-0.2 (21 Mar 2015)
+
+  21 Mar 2015; Tim Harder <radhermit@gentoo.org> +git-patch-tags-0.2.ebuild,
+  +metadata.xml:
+  Initial import.
+
